# json-lsp

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: main.yml
json_lsp/: main.py  package.json
