[metadata]
name = json-lsp
version = 0.2.0
description = JSON language server Python wrapper
author = Martin Renou
url = https://github.com/jupyter-lsp/json-lsp
license = BSD 3-Clause
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
keywords = Jupyter, JupyterLab, JSON, language-server

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    json-lsp = json_lsp.main:main
jupyter_lsp_spec_v1 =
    jupyter-json-language-server = json_lsp.main:load
